# Stalefish

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Stalefish_Analysis.ipynb  Stalefish_Analysis_Single_Brain.ipynb  Stalefish_Combined_Cases_CONTROL.ipynb  Stalefish_Combined_Cases_P4ENUC_all.ipynb
allen/: CMakeLists.txt  colors.m  compare.cpp  e100076267_55_101267565.m  e100081391_Id2.json  genes.csv  genes.sh  outonly.m  plotcolors.m  plotcolors.py  pydata.h5  retrieve.py  retrieve_forpaper.sh  sebcolour.py  testallen.json  testallen_min.json
allen/expt/: readme.md
allen/template_mouse_brain/: retrieve_P56_coronal.sh  retrieve_template.py  sample_from_page.api.html  threemaps.sh
data/: CMakeLists.txt  testTF.img.h5  testTF.json  testfreehand.json  testimg.json  vole_65_7E_id2_L23.json
mac/: .gitignore  README.md  bundle.sh  copylibs.sh  sf_icons.icns  sfv_icons.icns  sfviewbundle.sh
mac/sf_icons.iconset/: sf_rendericon.sh  sf_rendericon.xcf  sf_sliceicon.sh
mac/sfv_icons.iconset/: sf_sliceicon.xcf  sfview_view.sh
misc/: README.md  plot_contours.py  sf_dafticon.sh  ttrans.m  ttrans4.m
misc/icon/: sf_dafticon.xcf
misc/paper_figures/Fig_depth/: .gitignore  Fig_depth.json  Fig_depth.m  Fig_depth.py
misc/paper_figures/Fig_depth/svg/: README.md
misc/screenshots/: sfbanner.xcf
misc/sf_icons/: sf_dafticon.sh
reading/: README.md
reading/octave/: README.md
reading/python/: .gitignore  Fig_depth.py  README.md  depth_plots.py  plot_one.py  plot_triplechannel.py  read_example.py  showmap.py  showmap_contours.py
snap/: snapcraft.yaml
snap/gui/: sfgetjson.desktop  sfmakejson.desktop  sfresave.desktop  sfview.desktop  stalefish.desktop
src/: .gitignore  CMakeLists.txt  DM.h  FrameData.h  Makefile  PointRowsVisExt.h  QuadsVisualExt.h  Winder.h  cmake_install.cmake  sfgetjson.cpp  sfmakejson.cpp  sfresave.cpp  sfview.cpp  sfview_unwrap_fig.cpp  stalefish  stalefish.cpp  tools.h  viewer.cpp  viewer2.cpp
tools/: create_json.py
ucr/: V_Id2_1.h5  V_Id2_1.json  V_Id2_LI.h5  V_Id2_LI.json  V_Id2_LII.h5  V_id2_1.m  Vole_Rzrb_1.h5  Vole_Rzrb_1.json
ucr/Vole_Rzrb/: 1-7a_HC_RZRb_p1_01.tif  1-7a_HC_RZRb_p1_02.tif  1-7a_HC_RZRb_p1_03.tif  1-7a_HC_RZRb_p1_04.tif  1-7a_HC_RZRb_p1_05.tif  1-7a_HC_RZRb_p1_06.tif  1-7a_HC_RZRb_p1_07.tif  1-7a_HC_RZRb_p1_08.tif  1-7a_HC_RZRb_p1_09.tif  1-7a_HC_RZRb_p1_10.tif  1-7a_HC_RZRb_p1_11.tif  1-7a_HC_RZRb_p1_12.tif  1-7a_HC_RZRb_p1_13.tif  1-7a_HC_RZRb_p1_14.tif  1-7a_HC_RZRb_p1_15.tif  1-7a_HC_RZRb_p1_16.tif  1-7a_HC_RZRb_p1_17.tif  1-7a_HC_RZRb_p1_18.tif  1-7a_HC_RZRb_p1_19.tif  1-7a_HC_RZRb_p1_20.tif  1-7a_HC_RZRb_p1_21.tif  1-7a_HC_RZRb_p1_22.tif  1-7a_HC_RZRb_p1_23.tif  1-7a_HC_RZRb_p1_24.tif  1-7a_HC_RZRb_p1_25.tif  1-7a_HC_RZRb_p1_26.tif  1-7a_HC_RZRb_p1_27.tif  1-7a_HC_RZRb_p1_28.tif  1-7a_HC_RZRb_p1_29.tif  1-7a_HC_RZRb_p1_30.tif  1-7a_HC_RZRb_p1_31.tif  1-7a_HC_RZRb_p1_32.tif  1-7a_HC_RZRb_p1_33.tif  1-7a_HC_RZRb_p1_34.tif  1-7a_HC_RZRb_p1_35.tif  1-7a_HC_RZRb_p1_36.tif  1-7a_HC_RZRb_p1_37.tif  1-7a_HC_RZRb_p1_38.tif  1-7a_HC_RZRb_p1_39.tif  1-7a_HC_RZRb_p1_40.tif  (+5 more)
ucr/Vole_p1/Id2/HC1-9C/: 1-9C_HC_P1_ID2_10.5.16_01.tif  1-9C_HC_P1_ID2_10.5.16_03.tif  1-9C_HC_P1_ID2_10.5.16_05.tif  1-9C_HC_P1_ID2_10.5.16_06.tif  1-9C_HC_P1_ID2_10.5.16_08.tif  1-9C_HC_P1_ID2_10.5.16_11.tif  1-9C_HC_P1_ID2_10.5.16_15.tif  1-9C_HC_P1_ID2_10.5.16_16.tif  1-9C_HC_P1_ID2_10.5.16_17.tif  1-9C_HC_P1_ID2_10.5.16_18.tif  1-9C_HC_P1_ID2_10.5.16_19.tif  1-9C_HC_P1_ID2_10.5.16_22.tif  1-9C_HC_P1_ID2_10.5.16_23.tif  1-9C_HC_P1_ID2_10.5.16_30.tif  1-9C_HC_P1_ID2_10.5.16_33.tif  1-9C_HC_P1_ID2_10.5.16_37.tif  1-9C_HC_P1_ID2_10.5.16_39.tif  1-9C_HC_P1_ID2_10.5.16_40.tif  1-9C_HC_P1_ID2_10.5.16_41.tif  1-9C_HC_P1_ID2_10.5.16_42.tif  1-9C_HC_P1_ID2_10.5.16_44.tif  1-9C_HC_P1_ID2_10.5.16_45.tif  1-9C_HC_P1_ID2_10.5.16_46.tif  1-9C_HC_P1_ID2_10.5.16_47.tif  1-9C_HC_P1_ID2_10.5.16_48.tif
ucr/Vole_p1/Id2/HC1-9C_ordered/: 1-9C_HC_P1_ID2_10.5.16_10.tif  1-9C_HC_P1_ID2_10.5.16_12.tif  1-9C_HC_P1_ID2_10.5.16_13.tif  1-9C_HC_P1_ID2_10.5.16_14.tif  1-9C_HC_P1_ID2_10.5.16_2.tif  1-9C_HC_P1_ID2_10.5.16_20.tif  1-9C_HC_P1_ID2_10.5.16_21.tif  1-9C_HC_P1_ID2_10.5.16_24.tif  1-9C_HC_P1_ID2_10.5.16_25.tif  1-9C_HC_P1_ID2_10.5.16_26.tif  1-9C_HC_P1_ID2_10.5.16_27.tif  1-9C_HC_P1_ID2_10.5.16_28.tif  1-9C_HC_P1_ID2_10.5.16_30.tif  1-9C_HC_P1_ID2_10.5.16_31.tif  1-9C_HC_P1_ID2_10.5.16_33.tif  1-9C_HC_P1_ID2_10.5.16_34.tif  1-9C_HC_P1_ID2_10.5.16_35.tif  1-9C_HC_P1_ID2_10.5.16_36.tif  1-9C_HC_P1_ID2_10.5.16_38.tif  1-9C_HC_P1_ID2_10.5.16_4.tif  1-9C_HC_P1_ID2_10.5.16_43.tif  1-9C_HC_P1_ID2_10.5.16_7.tif  1-9C_HC_P1_ID2_10.5.16_9.tif
